Fixing navbar on mobile

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -30,6 +30,24 @@ body {
     padding: 0 20px;
 }
 
+@media (max-width:735px){
+    #navbar {
+        grid-template-columns: 100%;
+        grid-row-gap: 20px;
+        text-align: center;
+    }
+}
+
+
+@media (max-width:482px){
+    #navbar-items {
+        display: grid;
+        grid-template-columns: 100%;
+        grid-row-gap: 20px;
+        text-align: center;
+    }
+}
+
 .container {
     max-width: 860px;
     padding-bottom: 40px;
